<resources>
    <string name="app_name">ParkingPlace</string>
    <string name="slot_1">Slot 1</string>
    <string name="slot_2">Slot 2</string>
    <string name="slot_3">Slot 3</string>
    <string name="licensePlate_text">license plate</string>
    <string name="carBrand">car brand</string>
    <string name="name">name</string>
    <string name="update_text">Update</string>
    <string name="delete_text">Delete</string>
    <string name="slot_empty">Empty</string>
    <string name="string_empty" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_btnLogin">Login</string>
    <string name="info">Info</string>
    <string name="your_info">Your Info</string>
    <string name="alert_login">username or password is not match!!</string>
</resources>
